projects/compiler/test/parser/enumdecl_error_container_no_typeannotation.out
Error at %FILE_NAME%:2:15
Unexpected token '=', expected ':':
  |    One(a: A, b = "abc")
                   ^